--- a/web-app/src/main/resources/templates/index.html
+++ b/web-app/src/main/resources/templates/index.html
@@ -22,9 +22,9 @@
     <div class="site-wrapper-inner">
         <div class="cover-container">
             <div class="inner cover">
-                <h1 class="cover-heading">Welcome to Movie DB on Azure</h1>
+                <h1 class="cover-heading">Welcome to Movie DB on Azure!!!</h1>
                 <p class="lead">
-                    <a class="btn btn-lg btn-success" href="/movies">Top Rated Movies!!</a>
+                    <a class="btn btn-lg btn-success" href="/movies">Top Rated Movies</a>
                 </p>
             </div>
             <div class="mastfoot">
